content/products/searchlight/7.0.0-rc.0/reference/hyperalert/hyperalert_check_node_status.md
---
title: Check Node Status
menu:
  product_searchlight_7.0.0-rc.0:
    identifier: hyperalert-check-node-status
    name: Check Node Status
    parent: hyperalert-cli
product_name: searchlight
section_menu_id: reference
menu_name: product_searchlight_7.0.0-rc.0
info:
  version: 7.0.0-rc.0
---

## hyperalert check_node_status

Check Kubernetes Node

### Synopsis

Check Kubernetes Node

```
hyperalert check_node_status [flags]
```

### Options

```
  -h, --help          help for check_node_status
  -H, --host string   Icinga host name
```

### Options inherited from parent commands

```
      --alsologtostderr                  log to standard error as well as files
      --context string                   Use the context in kubeconfig
      --icinga.checkInterval int         Icinga check_interval in second. [Format: 30, 300] (default 30)
      --kubeconfig string                Path to kubeconfig file with authorization information (the master location is set by the master flag).
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --logtostderr                      log to standard error instead of files
      --stderrthreshold severity         logs at or above this threshold go to stderr
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO

* [hyperalert](/products/searchlight/7.0.0-rc.0/reference/hyperalert/hyperalert)	 - AppsCode Icinga2 plugin


